@startuml Room_ERD
!theme plain

title ERD — Phân hệ Phòng (Room)

package "rooms" {

    class Room {
        Long id : PK
        RoomType roomType : FK → room_types
        String roomNumber : UNIQUE, NOT NULL
        Integer floor : NOT NULL
        RoomStatus status : NOT NULL, DEFAULT AVAILABLE
        String description
        LocalDateTime lastCleanedAt
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }

    enum RoomStatus {
        AVAILABLE
        OCCUPIED
        MAINTENANCE
        CLEANING
    }
}

package "pricing" {

    class RoomPricing {
        Long id : PK
        RoomType roomType : FK → room_types
        Room room : FK → rooms (nullable)
        LocalDate date : NOT NULL
        BigDecimal price : NOT NULL
        Integer availableRooms : NOT NULL
        Boolean isOverridden : DEFAULT FALSE
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }

    class PricingRule {
        Long id : PK
        TargetType targetType : NOT NULL
        Long hotelId : FK → hotels
        RuleType ruleType : NOT NULL
        Season season
        Integer dayOfWeek
        Integer advanceDaysMin
        Integer advanceDaysMax
        Integer slotsRemainingMax
        BigDecimal adjustmentPercent : NOT NULL
        String name : NOT NULL
        Integer priority : DEFAULT 0
        Boolean isActive : DEFAULT TRUE
        LocalDateTime startDate
        LocalDateTime endDate
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }

    enum RuleType {
        DAY_OF_WEEK
        SEASON
        LAST_MINUTE
        EARLY_BIRD
        GROUP_SIZE
    }

    enum Season {
        PEAK
        REGULAR
        OFF
    }

    enum TargetType {
        HOTEL
        TOUR
    }
}

package "availability" {

    class RoomAvailability {
        Long id : PK
        Room room : FK → rooms
        RoomType roomType : FK → room_types
        LocalDate date : NOT NULL
        AvailabilityStatus status : NOT NULL
        Booking booking : FK → bookings
        LocalDate checkInDate
        LocalDate checkOutDate
        String note
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }

    enum AvailabilityStatus {
        AVAILABLE
        BOOKED
        BLOCKED
        MAINTENANCE
    }
}

package "audit" {

    class AuditLog {
        Long id : PK
        User actor : FK → users
        String actorEmail
        String action : NOT NULL
        String resourceType : NOT NULL
        Long resourceId
        String oldValue : JSON
        String newValue : JSON
        String reason
        String ipAddress
        String userAgent
        LocalDateTime createdAt
    }

    class LoginAttempt {
        Long id : PK
        String email : NOT NULL
        String ipAddress : NOT NULL
        Boolean success : NOT NULL
        String userAgent
        String failureReason
        LocalDateTime attemptedAt
    }
}

' RELATIONSHIPS
RoomType "1" o-- "N" Room : contains >
Room "N" --> "1" RoomType : belongs to <

RoomType "1" o-- "N" RoomPricing : has pricing >
RoomPricing "N" --> "1" RoomType : for room type >
RoomPricing "N" --> "1" Room : for room (nullable) >

RoomType "1" o-- "N" RoomAvailability : tracked for >
Room "1" o-- "N" RoomAvailability : daily status >
RoomAvailability "N" --> "1" Booking : booked by >
RoomAvailability "N" --> "1" RoomType : for type >

PricingRule "N" --> "1" Hotel : applies to >

AuditLog "N" --> "1" User : performed by >
@enduml
